removed gameMode param from room constructor