@@ -38,7 +38,7 @@ public class roomControllerTests {
     @MockBean
     private gameService service;
 
-    room room = new room("testRoom", false, "123", "normal");
+    room room = new room("testRoom", false, "123");
     player player = new player("testPlayer");
 
     @Test
@@ -97,11 +97,11 @@ public class roomControllerTests {
 
     @Test
     public void POST_add_room() throws Exception {
-        when(service.addRoom(anyString(), anyBoolean(), anyString())).thenReturn(room);
+        when(service.addRoom(anyString(), anyBoolean())).thenReturn(room);
 
         String content = testUtils.createJSON(
-                new ArrayList<>(List.of("roomName", "useBlankCards", "gameMode")),
-                new ArrayList<>(Arrays.asList(room.getName(), "false", "normal")));
+                new ArrayList<>(List.of("roomName", "useBlankCards")),
+                new ArrayList<>(Arrays.asList(room.getName(), "false")));
 
         mock.perform(post("/rooms")
                 .contentType(MediaType.APPLICATION_JSON)
@@ -173,8 +173,8 @@ public class roomControllerTests {
         when(service.getRoom(room.getUid())).thenReturn(room);
 
         String content = testUtils.createJSON(
-                new ArrayList<>(List.of("uid", "roomName", "roomStatus", "gameMode")),
-                new ArrayList<>(Arrays.asList(room.getUid(), room.getName(), room.getRoomStatus().toString(), "normal")));
+                new ArrayList<>(List.of("uid", "roomName", "roomStatus")),
+                new ArrayList<>(Arrays.asList(room.getUid(), room.getName(), room.getRoomStatus().toString())));
 
         mock.perform(put("/rooms/" + room.getUid())
                 .contentType(MediaType.APPLICATION_JSON)
